<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/wrapper_background"
    tools:context=".MainActivity">


    <!--Global Wrapper-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/wrapper_margin">

        <!--Question 1-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/card_background"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1"
                android:textColor="@color/text_color"
                android:textSize="@dimen/question_text_size" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/text_color"
                    android:text="@string/q1_a"
                    android:textSize="@dimen/options_text_size"
                    android:textColor="@color/text_color"/>

                <RadioButton
                    android:textSize="@dimen/options_text_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/text_color"
                    android:text="@string/q1_b"
                    android:textColor="@color/text_color" />

                <RadioButton
                    android:textSize="@dimen/options_text_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/text_color"
                    android:text="@string/q1_c"
                    android:textColor="@color/text_color" />

                <RadioButton
                    android:textSize="@dimen/options_text_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/text_color"
                    android:text="@string/q1_d"
                    android:textColor="@color/text_color" />

            </RadioGroup>

        </LinearLayout>


    </LinearLayout>

</ScrollView>